fixed: font size too small on some themes (Atom Dark)

--- a/styles/output-panel.less
+++ b/styles/output-panel.less
@@ -1,6 +1,8 @@
 @import "ui-variables";
 
 .output-panel {
+	font-size: max(@font-size, 12px);
+	
 	.resizer {
 		position: absolute;
 		top: 0;
